// XNAGameEngine | Hypo Klarich | 3/11/2014								//
// -CollisionManager.cs -Game1.cs -GameInterface.cs -GameObject.cs		//
// -Time: 11am - 1:38pm = 2:38											//
// -Notes: Collision is up and running. This is an un-optimized version //
// but is good enough for our first few projects.						//
//////////////////////////////////////////////////////////////////////////

XNAGameEngine | Michael Villar | 3/12/2014
- FpsManager.cs - Game1.cs - GameObject.cs - Mouse.cs (NEW)
- Time: 4:00 - 7:25 = 3:25
- Notes: Input the Mouse class. The mouse is using the Ship image
and it reacts with the position. However, the mouse can not have 
collision. Collision is dependent on the physics. Details in
Mouse Class.

XNAGameEngine | Jacqulyn Wong | 3/12/2014
- ChangeLog.txt
- Time: 12:49am - 12:53am = 0:04
- Notes: Am I able to just correct the spelling mistakes I see here?
	They make my eyes hurt. .. I did it anyway. I hope I got them all.

XNAGameEngine | Michael Villar | 3/12/2014								
 -(New) FpsManager.cs - Debug.cs		
 -Time: 1:30am - 3:05am = 1:35											
 -Notes: Added FpsManager.cs and FPS Notes. I commented quite a bit
 within the code to explain a little on what the code does. Look at 
 the FPS notes, which will probably be removed later so it does not take
 uneccessary space. It is filled with information that everyone should
 know.

XNAGameEngine | Michael Villar | 3/12/2014								
 -(New) FpsManager.cs - Debug.cs		
 -Time: 1:08am - 1:30am = :22											
 -Notes: Fixed variables and functions to fit the standard coding 
 conventions. Added an empty class called FpsManager.cs

XNAGameEngine | Michael Villar | 3/11/2014								
 -(New) Debug.cs - Game1.cs		
 -Time: 12pm - 1:08am = 1:08											
 -Notes: Debugger is good to go. Used exact same way as previous games.
 Open Debug.spritefont (Content) to change font attributes. This will
 make the default font.	

XNAGameEngine | Hypo Klarich | 3/11/2014								