@@ -13,36 +13,49 @@ namespace XNAGameEngine
     public class Debug
     {
         private SpriteBatch _batch;
-        private List<Vector2> _POSITION;
-        private List<string> _RENAME;
         private SpriteFont _font;
+        private static List<DebugLine> _WATCHLIST;
 
-        public List<Vector2> position { get { return _POSITION; } }
+        private static int _lineNum = 1;
 
         public Debug(ContentManager content, SpriteBatch t_batch)
         {
             _batch = t_batch;
-            _POSITION = new List<Vector2>();
             _font = content.Load<SpriteFont>("Debug");
-            _RENAME = new List<string>();
+            _WATCHLIST = new List<DebugLine>();
         }
 
-        public void PushBack(string text, float x, float y)
+        public static void PushBack(string text, float x, float y)
         {
-            _RENAME.Add(text);
-            _POSITION.Add(new Vector2(x, y));
+            string line = _lineNum + ": " + text;
+            _WATCHLIST.Add(new DebugLine(line, x, y));
+            _lineNum++;
         }
 
         public void Draw()
         {
-            for (int i = 0; i < _RENAME.Count; i++)
-            {
-                _batch.DrawString(_font, (i + 1) + ": " + _RENAME[i], _POSITION[i], Color.LimeGreen);
-                _batch.DrawString(_font, (i + 1) + ": " + _RENAME[i], _POSITION[i], Color.Black, 0f, Vector2.Zero, 1, SpriteEffects.None, .99f);
-            }
+            foreach (DebugLine line in _WATCHLIST)
+                _batch.DrawString(_font, line.text, line.position, Color.LimeGreen);
 
-            _RENAME.Clear();
-            _POSITION.Clear();
+            _WATCHLIST.Clear();
+            _lineNum = 1;
+        }
+    }
+
+    public class DebugLine
+    {
+        public string text;
+        public Vector2 position;
+
+        public DebugLine(string Text, float posx, float posy)
+        {
+            text = Text;
+            position = new Vector2(posx, posy);
+        }
+
+        public DebugLine()
+        {
+
         }
     }
 }
