@@ -20,6 +20,9 @@ namespace XNAGameEngine
         public Viewport viewport;
         public Random random;
         public CollisionManager collisionManager;
+        public GameMouse mouse;
+        public Debug debug;
+        public FpsManager fps;
 
         public GameInterface(Game1 game)
         {
@@ -30,10 +33,31 @@ namespace XNAGameEngine
 
         public void InitGraphicsDeviceManager() { graphicsDeviceManager = new GraphicsDeviceManager(_game); }
         public void InitCollision() { collisionManager = new CollisionManager(); }
+
+        public void LoadGameInterface()
+        {
+            mouse = new GameMouse(this, "Assets/ship");
+            debug = new Debug(Content, spriteBatch);
+            fps = new FpsManager(Content, spriteBatch);
+        }
+
         public void LoadSpriteBatch()
         {
             spriteBatch = new SpriteBatch(_game.GraphicsDevice);
             viewport = graphicsDeviceManager.GraphicsDevice.Viewport;
+        }
+
+        public void Update(GameTime gameTime)
+        {
+            mouse.Update(gameTime);
+            fps.Update(gameTime);
+        }
+
+        public void Draw()
+        {
+            mouse.Draw();
+            debug.Draw();
+            fps.Draw();
         }
 
     }
